log
Tue 22 Aug 2023 10:30:20 PM UTC: 
 tests:  0|6
total_score: 0/70
d93413d
Tue 22 Aug 2023 10:35:41 PM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:47: error: ‘structList’ undeclared (first use in this function)
   32 |   List* newList = (struct List*)malloc(sizeof(structList));
      |                                               ^~~~~~~~~~
list.c:32:47: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7c76590
Tue 22 Aug 2023 10:36:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
080773f
Tue 22 Aug 2023 10:37:34 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:38:12: error: ‘newList’ undeclared (first use in this function); did you mean ‘nextList’?
   38 |     return newList;
      |            ^~~~~~~
      |            nextList
list.c:38:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:40:1: error: control reaches end of non-void function [-Werror=return-type]
   40 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6ab646f
Tue 22 Aug 2023 10:37:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
3a31074
Tue 22 Aug 2023 10:38:08 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
6c5dc94
Tue 22 Aug 2023 10:38:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7466f0e
Tue 22 Aug 2023 10:39:56 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
2f3b568
Thu 24 Aug 2023 02:05:10 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘cleanList’:
list.c:84:7: error: too few arguments to function ‘free’
   84 |       free()
      |       ^~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:565:13: note: declared here
  565 | extern void free (void *__ptr) __THROW;
      |             ^~~~
In file included from test.c:5:
list.c:84:13: error: expected ‘;’ before ‘popFront’
   84 |       free()
      |             ^
      |             ;
   85 |       popFront(list);
      |       ~~~~~~~~
Compilation failed
7e71ad9
Thu 24 Aug 2023 02:05:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘cleanList’:
list.c:84:7: error: too few arguments to function ‘free’
   84 |       free();
      |       ^~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:565:13: note: declared here
  565 | extern void free (void *__ptr) __THROW;
      |             ^~~~
Compilation failed
e5d461d
Thu 24 Aug 2023 02:14:20 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8ea7768
Thu 24 Aug 2023 02:24:10 AM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
05104bb
Thu 24 Aug 2023 02:27:02 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
6239459
Thu 24 Aug 2023 02:27:54 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
be9d16c
Thu 24 Aug 2023 02:28:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f91bdf8
Thu 24 Aug 2023 02:31:30 AM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:5: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   50 |     current = list->head;
      |     ^~~~~~~
      |     popCurrent
list.c:50:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
514b9f4
Thu 24 Aug 2023 02:31:43 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3485227
Thu 24 Aug 2023 02:31:59 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
75a71c6
Thu 24 Aug 2023 02:35:50 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
24d67ce
Thu 24 Aug 2023 02:36:35 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
67bb5b7
Thu 24 Aug 2023 02:36:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3ec17dc
Thu 24 Aug 2023 02:38:17 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
785d0ed
Thu 24 Aug 2023 02:40:52 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:8: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   51 |     if(current!=NULL && current->next!=NULL){
      |        ^~~~~~~
      |        popCurrent
list.c:51:8: note: each undeclared identifier is reported only once for each function it appears in
list.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
587e5ca
Thu 24 Aug 2023 02:43:44 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:51:8: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   51 |     if(current!=NULL){
      |        ^~~~~~~
      |        popCurrent
list.c:51:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fb38efb
Thu 24 Aug 2023 02:44:47 AM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
a0f3e57
Thu 24 Aug 2023 02:45:42 AM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
dfa492d
Thu 24 Aug 2023 02:49:16 AM UTC: 
 list.c | 12 +++++-------
 1 file changed, 5 insertions(+), 7 deletions(-)
 tests:  1|5
total_score: 10/70
630c26a
Thu 24 Aug 2023 02:49:56 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f816e3d
Thu 24 Aug 2023 02:50:39 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
5613fde
Thu 24 Aug 2023 02:51:16 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:13: error: ‘head’ undeclared (first use in this function)
   50 |     if(list>head!=NULL){
      |             ^~~~
list.c:50:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ab7934e
Thu 24 Aug 2023 02:51:22 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:13: error: ‘head’ undeclared (first use in this function)
   50 |     if(list>head!=NULL){
      |             ^~~~
list.c:50:13: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e470799
